[package]
name = "hello-rust-lambda"
version = "0.1.0"
authors = ["Kenji Saito <ken-yo@mbr.nifty.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
log = "0.4.8"
serde = "1.0.41"
serde_derive = "1.0.41"
serde_json = "1.0.41"
failure = "^0.1"
simple_logger = "^1"
simple-error = "^0.1"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
