[package]
name = "hello-rust-lambda"
version = "0.1.0"
authors = ["Kenji Saito <ken-yo@mbr.nifty.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "*"
log = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
failure = "*"
simple_logger = "*"
simple-error = "*"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
