[package]
name = "hello-rust-lambda"
version = "0.1.0"
authors = ["Kenji Saito <ken-yo@mbr.nifty.com>"]
edition = "2021"


[dependencies]
lambda_runtime = "*"
log = "*"
serde = "*"
serde_json = "*"
simple_logger = "*"
tokio = {version = "*", features = ["full"]}

[[bin]]
name = "handler"
path = "src/main.rs"
